Push review controls to a new line when out of space (fixes Reply to Review layout issues) (#5961)

--- a/src/amo/components/AddonReviewListItem/styles.scss
+++ b/src/amo/components/AddonReviewListItem/styles.scss
@@ -1,14 +1,32 @@
 @import '~photon-colors/photon-colors';
+@import '~core/css/inc/vars';
 @import '~core/css/inc/mixins';
 @import '~amo/css/inc/vars';
 
-.AddonReviewListItem-control {
-  display: flex;
-  // On small screens, reduce the width to break up words in
-  // controls like *Edit my review*.
-  max-width: 20vw;
-  width: max-content;
+.AddonReviewListItem {
+  .Rating {
+    height: $default-line-height;
+  }
 
+  .UserReview-byLine {
+    flex-wrap: wrap;
+  }
+}
+
+.AddonReviewListItem-allControls {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 6px;
+  width: 100%;
+
+  @include respond-to(extraExtraLarge) {
+    justify-content: flex-start;
+    margin-top: 0;
+    width: auto;
+  }
+}
+
+.AddonReviewListItem-control {
   @include margin-start(6px);
 
   @include respond-to(medium) {
